# obsidian-search-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
obsidian_search_tool/: __init__.py  cli.py  logging_config.py  utils.py
obsidian_search_tool/commands/: __init__.py  completion_commands.py  search_commands.py  status_commands.py
obsidian_search_tool/core/: __init__.py  client.py  models.py
plugins/obsidian-search-tool/.claude-plugin/: plugin.json
plugins/obsidian-search-tool/commands/: auth.md  completion.md  search.md  status.md
plugins/obsidian-search-tool/skills/obsidian-search-tool/: SKILL.md
references/: README.md  dataview-metadata-on-pages.md  dataview-ql-data-commands.md  dataview-ql-functions.md  dataview-ql-query-types.md  jsonlogic-search-examples.md
tests/: __init__.py  test_utils.py
