[project]
name = "obsidian-search-tool"
version = "0.1.0"
description = "A CLI that searches an Obsidian vault through the Obsidian Local REST API using the Dataview Query Language (DQL) - TABLE ONLY - and JsonLogic query"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "rich>=13.0.0",
]
authors = [
    {name = "Dennis Vriend", email = "dvriend@ilionx.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "obsidian",
    "dataview",
    "dql",
    "search",
    "cli",
    "knowledge-management",
    "note-taking",
    "vault",
    "jsonlogic",
    "rest-api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Environment :: Console",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/dnvriend/obsidian-search-tool"
Repository = "https://github.com/dnvriend/obsidian-search-tool"
Issues = "https://github.com/dnvriend/obsidian-search-tool/issues"
Changelog = "https://github.com/dnvriend/obsidian-search-tool/releases"

[project.scripts]
obsidian-search-tool = "obsidian_search_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "types-requests>=2.31.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used (common in tests)
